--- a/package.json
+++ b/package.json
@@ -14,22 +14,22 @@
     "iconfont"
   ],
   "dependencies": {
+    "browser-sync": "^1.7.0",
     "coffee-script": "^1.8.0",
     "gulp": "^3.8.10",
-    "gulp-autoprefixer": "^1.0.1",
-    "gulp-clean": "^0.3.1",
+    "gulp-autoprefixer": "^2.0.0",
     "gulp-coffee": "^2.2.0",
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-copy": "0.0.2",
     "gulp-csscomb": "^3.0.3",
     "gulp-cssmin": "^0.1.6",
-    "gulp-iconfont": "^0.2.1",
+    "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
     "gulp-jade": "^0.9.0",
     "gulp-prettify": "^0.3.0",
     "gulp-stylus": "^1.3.4",
     "gulp-uglify": "^1.0.1",
-    "gulp-webserver": "^0.8.7",
+    "gulp-util": "^3.0.1",
     "gulp.spritesmith": "^1.4.0",
     "lodash": "^2.4.1"
   },
