--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "iconfont"
   ],
   "dependencies": {
-    "browser-sync": "^1.7.0",
+    "browser-sync": "^1.7.2",
+    "browserify": "^6.3.3",
     "coffee-script": "^1.8.0",
+    "coffeeify": "^1.0.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-coffee": "^2.2.0",
@@ -25,13 +27,16 @@
     "gulp-cssmin": "^0.1.6",
     "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
-    "gulp-jade": "^0.9.0",
+    "gulp-jade": "^0.10.0",
     "gulp-prettify": "^0.3.0",
+    "gulp-streamify": "0.0.5",
     "gulp-stylus": "^1.3.4",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "gulp.spritesmith": "^1.4.0",
-    "lodash": "^2.4.1"
+    "jquery": "^2.1.1",
+    "lodash": "^2.4.1",
+    "vinyl-source-stream": "^1.0.0"
   },
   "browsers": {
     "android": 4,
