--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend-project-template",
   "title": "Frontend Project Template",
-  "description": "A template for a quick start of the frontend project",
+  "description": "Frontend project template for a quick start",
   "keywords": [
     "project",
     "template",
@@ -14,12 +14,13 @@
     "iconfont"
   ],
   "dependencies": {
-    "browser-sync": "^1.7.2",
-    "browserify": "^6.3.3",
+    "bemto.jade": "^0.1.0",
+    "browser-sync": "^1.9.0",
+    "browserify": "^8.1.1",
     "coffee-script": "^1.8.0",
     "coffeeify": "^1.0.0",
     "gulp": "^3.8.10",
-    "gulp-autoprefixer": "^2.0.0",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-coffee": "^2.2.0",
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-copy": "0.0.2",
@@ -27,16 +28,18 @@
     "gulp-cssmin": "^0.1.6",
     "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
+    "gulp-if": "^1.2.5",
     "gulp-jade": "^0.10.0",
     "gulp-prettify": "^0.3.0",
     "gulp-streamify": "0.0.5",
-    "gulp-stylus": "^1.3.4",
-    "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
-    "gulp.spritesmith": "^1.4.0",
-    "jquery": "^2.1.1",
+    "gulp-stylus": "^2.0.0",
+    "gulp-uglify": "^1.0.2",
+    "gulp-util": "^3.0.2",
+    "gulp.spritesmith": "^2.4.0",
+    "jquery": "^2.1.3",
     "lodash": "^2.4.1",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.2.1"
   },
   "browsers": {
     "android": 4,
@@ -52,7 +55,7 @@
     "url": "https://github.com/ManneredBoor/frontend-project-template.git"
   },
   "author": {
-    "name": "Podlesny Dmitry",
+    "name": "Dmitry Podlesny",
     "url": "https://github.com/manneredboor"
   }
 }
