--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-autoprefixer": "^2.1.0",
     "gulp-coffee": "^2.2.0",
     "gulp-combine-media-queries": "^0.2.0",
+    "gulp-concat": "^2.4.3",
     "gulp-copy": "0.0.2",
     "gulp-csscomb": "^3.0.3",
     "gulp-cssmin": "^0.1.6",
