--- a/package.json
+++ b/package.json
@@ -15,32 +15,34 @@
   ],
   "dependencies": {
     "bemto.jade": "^0.1.0",
-    "browser-sync": "^1.9.0",
-    "browserify": "^8.1.1",
-    "coffee-script": "^1.8.0",
+    "browser-sync": "^2.2.1",
+    "browserify": "^9.0.3",
+    "coffee-script": "^1.9.1",
     "coffeeify": "^1.0.0",
-    "gulp": "^3.8.10",
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
-    "gulp-coffee": "^2.2.0",
+    "gulp-coffee": "^2.3.1",
     "gulp-combine-media-queries": "^0.2.0",
-    "gulp-concat": "^2.4.3",
+    "gulp-concat": "^2.5.2",
     "gulp-copy": "0.0.2",
     "gulp-csscomb": "^3.0.3",
     "gulp-cssmin": "^0.1.6",
     "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
     "gulp-if": "^1.2.5",
-    "gulp-jade": "^0.10.0",
+    "gulp-jade": "^1.0.0",
     "gulp-prettify": "^0.3.0",
     "gulp-streamify": "0.0.5",
-    "gulp-stylus": "^2.0.0",
-    "gulp-uglify": "^1.0.2",
-    "gulp-util": "^3.0.2",
-    "gulp.spritesmith": "^2.4.0",
+    "gulp-stylus": "^2.0.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
+    "gulp.spritesmith": "^3.1.0",
     "jquery": "^2.1.3",
-    "lodash": "^2.4.1",
+    "lodash": "^3.3.1",
+    "run-sequence": "^1.0.2",
     "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.2.1"
+    "watchify": "^2.4.0"
   },
   "browsers": {
     "android": 4,
