--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend-project-template",
   "title": "Frontend Project Template",
   "description": "Frontend project template for a quick start",
+  "version": "1.0.0",
   "keywords": [
     "project",
     "template",
@@ -14,11 +15,12 @@
     "iconfont"
   ],
   "dependencies": {
-    "bemto.jade": "^0.1.0",
-    "browser-sync": "^2.2.1",
+    "browser-sync": "^2.4.0",
     "browserify": "^9.0.3",
+    "caching-coffeeify": "^0.5.0",
     "coffee-script": "^1.9.1",
     "coffeeify": "^1.0.0",
+    "connect-modrewrite": "^0.7.11",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
@@ -28,6 +30,8 @@
     "gulp-copy": "0.0.2",
     "gulp-csscomb": "^3.0.3",
     "gulp-cssmin": "^0.1.6",
+    "gulp-filter": "^2.0.2",
+    "gulp-flatten": "0.0.4",
     "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
     "gulp-if": "^1.2.5",
@@ -37,12 +41,12 @@
     "gulp-stylus": "^2.0.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
-    "gulp.spritesmith": "^3.1.0",
-    "jquery": "^2.1.3",
-    "lodash": "^3.3.1",
+    "gulp.spritesmith": "^3.3.1",
+    "lodash": "^3.6.0",
+    "main-bower-files": "^2.6.2",
     "run-sequence": "^1.0.2",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.4.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^2.6.2"
   },
   "browsers": {
     "android": 4,
@@ -58,7 +62,7 @@
     "url": "https://github.com/ManneredBoor/frontend-project-template.git"
   },
   "author": {
-    "name": "Dmitry Podlesny",
+    "name": "Dmitry Podlesny <rezed93@gmail.com>",
     "url": "https://github.com/manneredboor"
   }
 }
