--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend-project-template",
   "title": "Frontend Project Template",
   "description": "Frontend project template for a quick start",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "keywords": [
     "project",
     "template",
@@ -24,24 +24,27 @@
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-bump": "^0.3.0",
     "gulp-coffee": "^2.3.1",
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-concat": "^2.5.2",
     "gulp-copy": "0.0.2",
-    "gulp-csscomb": "^3.0.3",
-    "gulp-cssmin": "^0.1.6",
     "gulp-filter": "^2.0.2",
     "gulp-flatten": "0.0.4",
     "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
     "gulp-if": "^1.2.5",
     "gulp-jade": "^1.0.0",
+    "gulp-minify-css": "^1.0.0",
+    "gulp-newer": "^0.5.0",
+    "gulp-plumber": "^1.0.0",
     "gulp-prettify": "^0.3.0",
     "gulp-streamify": "0.0.5",
     "gulp-stylus": "^2.0.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
     "gulp.spritesmith": "^3.3.1",
+    "jeet": "^6.1.2",
     "lodash": "^3.6.0",
     "main-bower-files": "^2.6.2",
     "run-sequence": "^1.0.2",
@@ -52,7 +55,7 @@
     "android": 4,
     "chrome": 36,
     "firefox": 31,
-    "ie": 10,
+    "ie": 9,
     "ios": 6,
     "opera": 12,
     "safari": 6
