--- a/package.json
+++ b/package.json
@@ -1,71 +1,71 @@
 {
-  "name": "frontend-project-template",
-  "title": "Frontend Project Template",
-  "description": "Frontend project template for a quick start",
-  "version": "1.1.1",
-  "keywords": [
-    "project",
-    "template",
-    "frontend",
-    "gulp",
-    "jade",
-    "stylus",
-    "coffeescript",
-    "spritesmith",
-    "iconfont"
-  ],
-  "dependencies": {
-    "browser-sync": "^2.4.0",
-    "browserify": "^9.0.3",
-    "caching-coffeeify": "^0.5.0",
-    "coffee-script": "^1.9.1",
-    "coffeeify": "^1.0.0",
-    "connect-modrewrite": "^0.7.11",
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-bump": "^0.3.0",
-    "gulp-coffee": "^2.3.1",
-    "gulp-combine-media-queries": "^0.2.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-copy": "0.0.2",
-    "gulp-filter": "^2.0.2",
-    "gulp-flatten": "0.0.4",
-    "gulp-iconfont": "^1.0.0",
-    "gulp-iconfont-css": "0.0.9",
-    "gulp-if": "^1.2.5",
-    "gulp-jade": "^1.0.0",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-newer": "^0.5.0",
-    "gulp-plumber": "^1.0.0",
-    "gulp-prettify": "^0.3.0",
-    "gulp-streamify": "0.0.5",
-    "gulp-stylus": "^2.0.1",
-    "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.4",
-    "gulp.spritesmith": "^3.3.1",
-    "jeet": "^6.1.2",
-    "lodash": "^3.6.0",
-    "main-bower-files": "^2.6.2",
-    "run-sequence": "^1.0.2",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^2.6.2"
-  },
-  "browsers": {
-    "android": 4,
-    "chrome": 36,
-    "firefox": 31,
-    "ie": 9,
-    "ios": 6,
-    "opera": 12,
-    "safari": 6
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ManneredBoor/frontend-project-template.git"
-  },
-  "author": {
-    "name": "Dmitry Podlesny <rezed93@gmail.com>",
-    "url": "https://github.com/manneredboor"
-  }
+	"name": "frontend-project-template",
+	"title": "Frontend Project Template",
+	"description": "Frontend project template for a quick start",
+	"version": "1.1.1",
+	"keywords": [
+		"project",
+		"template",
+		"frontend",
+		"gulp",
+		"jade",
+		"stylus",
+		"coffeescript",
+		"spritesmith",
+		"iconfont"
+	],
+	"dependencies": {
+		"browser-sync": "^2.4.0",
+		"browserify": "^9.0.3",
+		"caching-coffeeify": "^0.5.0",
+		"coffee-script": "^1.9.1",
+		"coffeeify": "^1.0.0",
+		"connect-modrewrite": "^0.7.11",
+		"del": "^1.1.1",
+		"gulp": "^3.8.11",
+		"gulp-autoprefixer": "^2.1.0",
+		"gulp-bump": "^0.3.0",
+		"gulp-coffee": "^2.3.1",
+		"gulp-combine-media-queries": "^0.2.0",
+		"gulp-concat": "^2.5.2",
+		"gulp-copy": "0.0.2",
+		"gulp-csso": "^1.0.0",
+		"gulp-filter": "^2.0.2",
+		"gulp-flatten": "0.0.4",
+		"gulp-iconfont": "^1.0.0",
+		"gulp-iconfont-css": "0.0.9",
+		"gulp-if": "^1.2.5",
+		"gulp-jade": "^1.0.0",
+		"gulp-newer": "^0.5.0",
+		"gulp-plumber": "^1.0.0",
+		"gulp-prettify": "^0.3.0",
+		"gulp-streamify": "0.0.5",
+		"gulp-stylus": "^2.0.1",
+		"gulp-uglify": "^1.1.0",
+		"gulp-util": "^3.0.4",
+		"gulp.spritesmith": "^3.3.1",
+		"jeet": "^6.1.2",
+		"lodash": "^3.6.0",
+		"main-bower-files": "^2.6.2",
+		"run-sequence": "^1.0.2",
+		"vinyl-source-stream": "^1.1.0",
+		"watchify": "^2.6.2"
+	},
+	"browsers": {
+		"android": 4,
+		"chrome": 36,
+		"firefox": 31,
+		"ie": 9,
+		"ios": 6,
+		"opera": 12,
+		"safari": 6
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ManneredBoor/frontend-project-template.git"
+	},
+	"author": {
+		"name": "Dmitry Podlesny <rezed93@gmail.com>",
+		"url": "https://github.com/manneredboor"
+	}
 }
