--- a/package.json
+++ b/package.json
@@ -1,71 +1,72 @@
 {
-	"name": "frontend-project-template",
-	"title": "Frontend Project Template",
-	"description": "Frontend project template for a quick start",
-	"version": "1.1.1",
-	"keywords": [
-		"project",
-		"template",
-		"frontend",
-		"gulp",
-		"jade",
-		"stylus",
-		"coffeescript",
-		"spritesmith",
-		"iconfont"
-	],
-	"dependencies": {
-		"browser-sync": "^2.7.12",
-		"browserify": "^10.2.4",
-		"caching-coffeeify": "^0.5.1",
-		"coffee-script": "^1.9.3",
-		"coffeeify": "^1.1.0",
-		"connect-modrewrite": "^0.8.1",
-		"del": "^1.2.0",
-		"gulp": "^3.9.0",
-		"gulp-autoprefixer": "^2.3.1",
-		"gulp-bump": "^0.3.1",
-		"gulp-coffee": "^2.3.1",
-		"gulp-combine-media-queries": "^0.2.0",
-		"gulp-concat": "^2.6.0",
-		"gulp-copy": "0.0.2",
-		"gulp-csso": "^1.0.0",
-		"gulp-filter": "^2.0.2",
-		"gulp-flatten": "0.0.4",
-		"gulp-iconfont": "^3.0.2",
-		"gulp-iconfont-css": "0.0.9",
-		"gulp-if": "^1.2.5",
-		"gulp-jade": "^1.0.1",
-		"gulp-newer": "^0.5.1",
-		"gulp-plumber": "^1.0.1",
-		"gulp-prettify": "^0.3.0",
-		"gulp-streamify": "0.0.5",
-		"gulp-stylus": "^2.0.5",
-		"gulp-uglify": "^1.2.0",
-		"gulp-util": "^3.0.6",
-		"gulp.spritesmith": "^3.8.2",
-		"jeet": "^6.1.2",
-		"lodash": "^3.9.3",
-		"main-bower-files": "^2.8.2",
-		"run-sequence": "^1.1.1",
-		"vinyl-source-stream": "^1.1.0",
-		"watchify": "^3.2.3"
-	},
-	"browsers": {
-		"android": 4,
-		"chrome": 36,
-		"firefox": 31,
-		"ie": 9,
-		"ios": 6,
-		"opera": 12,
-		"safari": 6
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/ManneredBoor/frontend-project-template.git"
-	},
-	"author": {
-		"name": "Dmitry Podlesny <rezed93@gmail.com>",
-		"url": "https://github.com/manneredboor"
-	}
+  "name": "frontend-project-template",
+  "title": "Frontend Project Template",
+  "description": "Frontend project template for a quick start",
+  "version": "1.1.1",
+  "keywords": [
+    "project",
+    "template",
+    "frontend",
+    "gulp",
+    "jade",
+    "stylus",
+    "coffeescript",
+    "spritesmith",
+    "iconfont"
+  ],
+  "dependencies": {
+    "browser-sync": "^2.7.12",
+    "browserify": "^10.2.4",
+    "caching-coffeeify": "^0.5.1",
+    "coffee-script": "^1.9.3",
+    "coffeeify": "^1.1.0",
+    "connect-modrewrite": "^0.8.1",
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-bump": "^0.3.1",
+    "gulp-coffee": "^2.3.1",
+    "gulp-combine-media-queries": "^0.2.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-copy": "0.0.2",
+    "gulp-csso": "^1.0.0",
+    "gulp-filter": "^2.0.2",
+    "gulp-flatten": "0.0.4",
+    "gulp-iconfont": "^3.0.2",
+    "gulp-iconfont-css": "0.0.9",
+    "gulp-if": "^1.2.5",
+    "gulp-jade": "^1.0.1",
+    "gulp-newer": "^0.5.1",
+    "gulp-plumber": "^1.0.1",
+    "gulp-prettify": "^0.3.0",
+    "gulp-streamify": "0.0.5",
+    "gulp-stylus": "^2.0.5",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
+    "gulp.spritesmith": "^3.8.2",
+    "is-there": "^4.0.0",
+    "jeet": "^6.1.2",
+    "lodash": "^3.9.3",
+    "main-bower-files": "^2.8.2",
+    "run-sequence": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.3"
+  },
+  "browsers": {
+    "android": 4,
+    "chrome": 36,
+    "firefox": 31,
+    "ie": 9,
+    "ios": 6,
+    "opera": 12,
+    "safari": 6
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ManneredBoor/frontend-project-template.git"
+  },
+  "author": {
+    "name": "Dmitry Podlesny <rezed93@gmail.com>",
+    "url": "https://github.com/manneredboor"
+  }
 }
